syntax = "proto3";
package proto;

option go_package = ".";

message DecodeTokenRequest {
  string token = 1;
}

message DecodeTokenResponse {
  string title = 1;
  string message = 2;
}

service DecodeTokenService {
  rpc DecodeToken(DecodeTokenRequest) returns (DecodeTokenResponse);
}